--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Setup</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>React Fundamentals</title>
   </head>
   <body>
     <div id="app"></div>
